--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
             ],
             "styles": [
               "./node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "./node_modules/remixicon/fonts/remixicon.css",
               "src/assets/css/animate.css",
               "src/theme/variables.scss", 
               "src/global.scss"
@@ -50,13 +51,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "3mb",
+                  "maximumWarning": "4mb",
                   "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "3kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "5kb",
+                  "maximumError": "7kb"
                 }
               ],
               "fileReplacements": [
