--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Radix",
+  "name": "mobileapp",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -14,71 +14,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.1",
-    "@angular/common": "^17.3.1",
-    "@angular/compiler": "^17.3.1",
-    "@angular/core": "^17.3.1",
-    "@angular/forms": "^17.3.1",
-    "@angular/platform-browser": "^17.3.1",
-    "@angular/platform-browser-dynamic": "^17.3.1",
-    "@angular/router": "^17.3.1",
-    "@capacitor/android": "5.7.4",
-    "@capacitor/app": "5.0.7",
-    "@capacitor/core": "5.7.4",
-    "@capacitor/haptics": "5.0.7",
-    "@capacitor/ios": "5.7.4",
-    "@capacitor/keyboard": "5.0.8",
-    "@capacitor/local-notifications": "^5.0.7",
-    "@capacitor/preferences": "^5.0.7",
-    "@capacitor/splash-screen": "^5.0.7",
-    "@capacitor/status-bar": "^5.0.7",
-    "@capacitor/toast": "^5.0.7",
-    "@flaticon/flaticon-uicons": "^3.1.0",
-    "@hugotomazi/capacitor-navigation-bar": "^3.0.0",
-    "@ionic/angular": "^7.8.1",
-    "@ionic/pwa-elements": "^3.2.2",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@capacitor/android": "7.0.1",
+    "@capacitor/app": "7.0.0",
+    "@capacitor/core": "7.0.1",
+    "@capacitor/haptics": "7.0.0",
+    "@capacitor/keyboard": "7.0.0",
+    "@capacitor/local-notifications": "^7.0.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/splash-screen": "^7.0.0",
+    "@capacitor/status-bar": "7.0.0",
+    "@capacitor/toast": "^7.0.0",
+    "@flaticon/flaticon-uicons": "^3.3.1",
+    "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "crypto-js": "^4.2.0",
-    "ionicons": "^7.3.0",
+    "ionicons": "^7.0.0",
     "ng-circle-progress": "^1.7.1",
-    "remixicon": "^4.2.0",
-    "rxjs": "~7.8.1",
-    "swiper": "^11.0.7",
-    "tslib": "^2.6.2",
-    "zone.js": "~0.14.4"
+    "remixicon": "^4.6.0",
+    "rxjs": "~7.8.0",
+    "swiper": "^11.2.2",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.2",
-    "@angular-eslint/builder": "^17.3.0",
-    "@angular-eslint/eslint-plugin": "^17.3.0",
-    "@angular-eslint/eslint-plugin-template": "^17.3.0",
-    "@angular-eslint/schematics": "^17.3.0",
-    "@angular-eslint/template-parser": "^17.3.0",
-    "@angular/cli": "^17.3.2",
-    "@angular/compiler-cli": "^17.3.1",
-    "@angular/language-service": "^17.3.1",
-    "@capacitor/cli": "5.7.4",
-    "@ionic/angular-toolkit": "^11.0.1",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular-eslint/builder": "^19.0.0",
+    "@angular-eslint/eslint-plugin": "^19.0.0",
+    "@angular-eslint/eslint-plugin-template": "^19.0.0",
+    "@angular-eslint/schematics": "^19.0.0",
+    "@angular-eslint/template-parser": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@angular/language-service": "^19.0.0",
+    "@capacitor/cli": "7.0.1",
+    "@ionic/angular-toolkit": "^12.0.0",
     "@types/crypto-js": "^4.2.2",
-    "@types/d3-scale": "^4.0.8",
-    "@types/d3-selection": "^3.0.10",
-    "@types/d3-shape": "^3.1.6",
-    "@types/intl-tel-input": "^18.1.4",
-    "@types/jasmine": "~5.1.4",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.2.1",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~5.1.2",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.3",
+    "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.1",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "~5.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
+    "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.4.3"
+    "typescript": "~5.6.3"
   },
   "description": "An Ionic project"
 }
