--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,8 @@
               "buildTarget": "app:build:production"
             },
             "development": {
-              "buildTarget": "app:build:development"
+              "buildTarget": "app:build:development",
+              "proxyConfig": "proxy.conf.json"
             },
             "ci": {
               "progress": false
