--- a/angular.json
+++ b/angular.json
@@ -87,8 +87,7 @@
               "buildTarget": "app:build:production"
             },
             "development": {
-              "buildTarget": "app:build:development",
-              "proxyConfig": "proxy.conf.json"
+              "buildTarget": "app:build:development"
             },
             "ci": {
               "progress": false
